Fixed overflow on small screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,21 +9,18 @@
 body {
     margin: 0;
     min-height: 100vh;
-    width: 100vw;
     display: flex;
+    align-items: center;
     flex-direction: column;
     font-family: FiraCode, sans-serif;
-    overflow-x: hidden;
     background-color: #1e1e1e;
     color: white;
+    word-break: break-word;
 }
 
 main {
+    max-width: 95%;
     flex: 1;
-    max-width: 800px;
-    margin: auto;
-    padding-left: 15px;
-    padding-right: 20px;
 }
 
 h1 {
@@ -44,6 +41,7 @@ h4 {
 
 
 p {
+    max-width: 800px;
     line-height: 1.8;
 }
 
@@ -79,19 +77,19 @@ img {
 
 /* Code */
 
-.code-view {
+.code-container {
     display: flex;
-    justify-content: center;
+}
+
+.code {
+    margin: auto;
     font-size: 1.2em;
     text-shadow: 0 0 10px gray;
+    overflow-x: auto;
 }
+
 
 /* Navigation bar */
-
-#nav {
-    display: block;
-    text-align: center;
-}
 
 #nav a {
     padding: 20px;
@@ -102,10 +100,10 @@ img {
 /* Footer */
 
 #footer {
+    width: 100%;
     margin-top: 80px;
     box-shadow: 0 0 10px black;
     padding: 30px 0 30px 0;
-    margin-bottom: 0;
     text-align: center;
 }
 
